Retrieve prototype during custom element construction.

BUG=649158,658066

Review-Url: https://codereview.chromium.org/2441943002
Cr-Commit-Position: refs/heads/master@{#427333}

Former-commit-id: 8e2ff264b2d6eaddcf5546b83bb382dd91ae833e