third_party/WebKit/Source/bindings/core/v8/V8HTMLConstructor.cpp
@@ -19,6 +19,7 @@
 
 namespace blink {
 
+// https://html.spec.whatwg.org/#html-element-constructors
 void V8HTMLElement::HTMLConstructor(
     const v8::FunctionCallbackInfo<v8::Value>& info) {
   DCHECK(info.IsConstructCall());
@@ -26,16 +27,35 @@ void V8HTMLElement::HTMLConstructor(
   v8::Isolate* isolate = info.GetIsolate();
   ScriptState* scriptState = ScriptState::current(isolate);
 
-  if (!RuntimeEnabledFeatures::customElementsV1Enabled() ||
-      !scriptState->world().isMainWorld()) {
-    V8ThrowException::throwTypeError(info.GetIsolate(), "Illegal constructor");
+  if (!scriptState->contextIsValid()) {
+    V8ThrowException::throwError(isolate, "The context has been destroyed");
     return;
   }
 
+  if (!RuntimeEnabledFeatures::customElementsV1Enabled() ||
+      !scriptState->world().isMainWorld()) {
+    V8ThrowException::throwTypeError(isolate, "Illegal constructor");
+    return;
+  }
+
+  // 2. If NewTarget is equal to the active function object, then
+  // throw a TypeError and abort these steps.
+  v8::Local<v8::Function> activeFunctionObject =
+      scriptState->perContextData()->constructorForType(
+          &V8HTMLElement::wrapperTypeInfo);
+  v8::Local<v8::Value> newTarget = info.NewTarget();
+  if (newTarget == activeFunctionObject) {
+    V8ThrowException::throwTypeError(isolate, "Illegal constructor");
+    return;
+  }
+
+  // 3. Let definition be the entry in registry with constructor equal
+  // to NewTarget. If there is no such definition, then throw a
+  // TypeError and abort these steps.
   LocalDOMWindow* window = scriptState->domWindow();
   ScriptCustomElementDefinition* definition =
       ScriptCustomElementDefinition::forConstructor(
-          scriptState, window->customElements(), info.NewTarget());
+          scriptState, window->customElements(), newTarget);
   if (!definition) {
     V8ThrowException::throwTypeError(isolate, "Illegal constructor");
     return;
@@ -43,6 +63,29 @@ void V8HTMLElement::HTMLConstructor(
 
   ExceptionState exceptionState(ExceptionState::ConstructionContext,
                                 "HTMLElement", info.Holder(), isolate);
+
+  // TODO(dominicc): Implement steps 4-5.
+
+  // 6. Let prototype be Get(NewTarget, "prototype"). Rethrow any exceptions.
+  v8::Local<v8::Value> prototype;
+  v8::Local<v8::String> prototypeString = v8AtomicString(isolate, "prototype");
+  if (!v8Call(newTarget.As<v8::Object>()->Get(scriptState->context(),
+                                              prototypeString),
+              prototype)) {
+    return;
+  }
+
+  // 7. If Type(prototype) is not Object, then: ...
+  if (!prototype->IsObject()) {
+    if (V8PerContextData* perContextData = V8PerContextData::from(
+            newTarget.As<v8::Object>()->CreationContext())) {
+      prototype =
+          perContextData->prototypeForType(&V8HTMLElement::wrapperTypeInfo);
+    } else {
+      V8ThrowException::throwError(isolate, "The context has been destroyed");
+      return;
+    }
+  }
 
   Element* element;
   if (definition->constructionStack().isEmpty()) {
@@ -69,7 +112,9 @@ void V8HTMLElement::HTMLConstructor(
   // instead.
   v8SetReturnValue(info, wrapper);
 
-  wrapper->SetPrototype(scriptState->context(), definition->prototype())
+  // 11. Perform element.[[SetPrototypeOf]](prototype). Rethrow any exceptions.
+  // Note: I don't think this prototype set *can* throw exceptions.
+  wrapper->SetPrototype(scriptState->context(), prototype.As<v8::Object>())
       .ToChecked();
 }
 
